feat(oauth): 添加Gmail OAuth2认证支持并优化相关功能
- 新增Gmail OAuth2认证功能，提高安全性
- 添加代理支持解决网络连接问题
- 优化错误处理和日志输出
- 更新文档和CHANGELOG
- 清理临时文件和调试输出

--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,15 @@ tmp/
 test_folder_encoding.py
 generate_imap_utf7.py
 debug_*.py
+
+# OAuth敏感文件
+gmail_token.json
+token.json
+oauth_token.json
+credentials.json
+user_email.txt
+
+# 临时和测试文件
+clean_oauth.py
+simple_oauth.py
+reauth_oauth.py
