feat: 完善自定义邮箱支持的后端实现
核心改动：
1. 修复 get_supported_providers() 返回正确的字典格式 {name: display_name}
2. 在 email_providers.py 中添加 'custom' 邮箱提供商配置
3. 实现 validate_custom_config() 方法验证自定义IMAP配置
4. 实现 create_custom_provider() 方法创建自定义邮箱配置对象
5. 在 fetch_emails_incremental() 中添加自定义IMAP参数支持
6. 在 mail_client.py 中增强构造函数以支持自定义IMAP服务器

现在支持：
✅ 任何IMAP邮箱服务的自定义配置
✅ IMAP服务器地址、端口、SSL选项的灵活配置
✅ 配置验证和错误处理
✅ 完整的导出流程集成

--- a/email_providers_config.json
+++ b/email_providers_config.json
@@ -54,6 +54,18 @@
       "domain_patterns": ["yahoo.com", "yahoo.cn", "ymail.com"],
       "description": "雅虎邮箱服务",
       "setup_instructions": "需要开启两步验证并生成应用密码"
+    },
+    "custom": {
+      "name": "custom",
+      "display_name": "其他邮箱(自定义)",
+      "imap_server": "",
+      "imap_port": 993,
+      "use_ssl": true,
+      "auth_type": "password",
+      "domain_patterns": [],
+      "description": "通用邮箱服务 - 需要手动配置IMAP服务器信息",
+      "setup_instructions": "请输入邮箱提供商的IMAP服务器地址、端口等信息",
+      "is_custom": true
     }
   },
   "default_settings": {
